# null-db

./: .gitignore  Cargo.toml  default.nix  shell.nix
cli/: Cargo.toml
cli/src/: main.rs  null_client.rs
database/: Cargo.toml  Dockerfile  compose.yaml  default.nix
database/hack/: reset.sh  run_3.sh
database/src/: file_compactor.rs  main.rs  nulldb.rs  utils.rs
database/src/file/: file_engine.rs  mod.rs  record.rs
database/src/index/: mod.rs
database/src/raft/: candidate.rs  config.rs  follower.rs  grpcserver.rs  leader.rs  mod.rs
nix/: module.nix  overlay.nix
nix/nixos-tests/basic-raft/: default.nix
