[package]
name = "null-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1"
clap = { version = "4.4.10", features = ["derive", "string"] }
easy_reader = "0.5.1"
env_logger = "0.11.1"
fnv = "1.0.7"
lazy_static = "1.4.0"
log = "0.4"
prost = "0.12"
quick-xml = { version = "0.31.0", features = ["serialize"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
tempfile = "3.8.0"
tokio = { version = "1.26.0", features = ["full"] }
tonic = { version = "0.10.2" }


[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
